# pcf_generator_cli

./: README.md  main.py  pcf.py  pyproject.toml  urn.py
pcf_generator_cli/: carbon_footprint.py  pcf.py  urn.py
tests/: test_carbon_footprint.py  test_main.py  test_pcf.py  test_urn.py
