[tool.poetry]
name = "pcf-generator-cli"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <louis@zerotwentyfifty.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
