[tool.poetry]
name = "pcf-generator-cli"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <louis@zerotwentyfifty.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
urnparse = "^0.2.1"
casregnum = "^1.0.1"
pact-methodology = "^0.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
